// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActivityTemplateParserService deserializeLibraryActivities Positive: Should convert UpdateActivityDto type activities to ActivityTemplate class and return them in an array 1`] = `
[
  ActivityTemplate {
    "activity_data": ActivityData {
      "allowed_apps": undefined,
      "allowed_focus_mode_id": undefined,
      "allowed_urls": undefined,
      "break_type": undefined,
      "category": undefined,
      "choice_type": undefined,
      "competency_level": undefined,
      "current_competency_level": undefined,
      "image_urls": undefined,
      "include_in_every_break": undefined,
      "is_office_friendly": undefined,
      "log_quantity_question": undefined,
      "name": "Yoga",
      "priority": undefined,
      "show_saved_distracting_websites": undefined,
      "take_notes": undefined,
      "text_instructions": undefined,
      "video_urls": [
        "https://www.youtube.com/watch?v=nz5MCv0sFDA",
        "https://www.youtube.com/watch?v=oexYiIy75V8",
      ],
    },
    "activity_type": "library",
    "check_list": undefined,
    "completion_requirements": undefined,
    "duration_seconds": 300,
    "has_choices": false,
    "id": "116af843-818a-4e09-aaa2-53da041896de",
    "impact_category": undefined,
    "linked_activity_template_id": undefined,
    "log_quantity": false,
    "log_summary_type": undefined,
    "pack_id": undefined,
    "sequence_index": 0,
    "user_id": "3a4f0bb1-5313-49da-9ae6-cc28e864763f",
  },
  ActivityTemplate {
    "activity_data": ActivityData {
      "allowed_apps": undefined,
      "allowed_focus_mode_id": undefined,
      "allowed_urls": undefined,
      "break_type": undefined,
      "category": undefined,
      "choice_type": undefined,
      "competency_level": undefined,
      "current_competency_level": undefined,
      "image_urls": undefined,
      "include_in_every_break": undefined,
      "is_office_friendly": undefined,
      "log_quantity_question": undefined,
      "name": "Journaling",
      "priority": undefined,
      "show_saved_distracting_websites": undefined,
      "take_notes": undefined,
      "text_instructions": undefined,
      "video_urls": [],
    },
    "activity_type": "library",
    "check_list": undefined,
    "completion_requirements": undefined,
    "duration_seconds": 300,
    "has_choices": false,
    "id": "b8301b80-1286-464a-b0be-5838f52e2ff6",
    "impact_category": undefined,
    "linked_activity_template_id": undefined,
    "log_quantity": undefined,
    "log_summary_type": undefined,
    "pack_id": undefined,
    "sequence_index": 1,
    "user_id": "3a4f0bb1-5313-49da-9ae6-cc28e864763f",
  },
  ActivityTemplate {
    "activity_data": ActivityData {
      "allowed_apps": undefined,
      "allowed_focus_mode_id": undefined,
      "allowed_urls": undefined,
      "break_type": undefined,
      "category": undefined,
      "choice_type": undefined,
      "competency_level": undefined,
      "current_competency_level": undefined,
      "image_urls": undefined,
      "include_in_every_break": undefined,
      "is_office_friendly": undefined,
      "log_quantity_question": undefined,
      "name": "Deep breathing",
      "priority": undefined,
      "show_saved_distracting_websites": undefined,
      "take_notes": undefined,
      "text_instructions": undefined,
      "video_urls": [
        "https://www.youtube.com/watch?v=36mnXAQGRzc",
      ],
    },
    "activity_type": "library",
    "check_list": undefined,
    "completion_requirements": undefined,
    "duration_seconds": 180,
    "has_choices": false,
    "id": "74935284-e936-4247-8afa-e453484865e0",
    "impact_category": undefined,
    "linked_activity_template_id": undefined,
    "log_quantity": false,
    "log_summary_type": undefined,
    "pack_id": undefined,
    "sequence_index": 2,
    "user_id": "3a4f0bb1-5313-49da-9ae6-cc28e864763f",
  },
]
`;

exports[`ActivityTemplateParserService deserializeRoutineActivities Positive: Should return an array containing deserialized routine activities(formats activity DTOs to ActivityTemplates) 1`] = `
{
  "deserializedActivityTemplates": [
    [
      ActivityTemplate {
        "activity_data": ActivityData {
          "allowed_apps": undefined,
          "allowed_focus_mode_id": undefined,
          "allowed_urls": undefined,
          "break_type": undefined,
          "category": undefined,
          "choice_type": undefined,
          "competency_level": undefined,
          "current_competency_level": undefined,
          "image_urls": undefined,
          "include_in_every_break": undefined,
          "is_office_friendly": undefined,
          "log_quantity_question": undefined,
          "name": "Yoga",
          "priority": undefined,
          "show_saved_distracting_websites": undefined,
          "take_notes": undefined,
          "text_instructions": undefined,
          "video_urls": [
            "https://www.youtube.com/watch?v=nz5MCv0sFDA",
            "https://www.youtube.com/watch?v=oexYiIy75V8",
          ],
        },
        "activity_type": "morning",
        "check_list": undefined,
        "completion_requirements": undefined,
        "duration_seconds": 300,
        "has_choices": false,
        "id": "116af843-818a-4e09-aaa2-53da041896de",
        "impact_category": undefined,
        "linked_activity_template_id": undefined,
        "log_quantity": false,
        "log_summary_type": undefined,
        "pack_id": "8f458a6b-72ad-471b-80cc-22f47fd7c2b4",
        "sequence_index": 0,
        "user_id": "3a4f0bb1-5313-49da-9ae6-cc28e864763f",
      },
      ActivityTemplate {
        "activity_data": ActivityData {
          "allowed_apps": undefined,
          "allowed_focus_mode_id": undefined,
          "allowed_urls": undefined,
          "break_type": undefined,
          "category": undefined,
          "choice_type": undefined,
          "competency_level": undefined,
          "current_competency_level": undefined,
          "image_urls": undefined,
          "include_in_every_break": undefined,
          "is_office_friendly": undefined,
          "log_quantity_question": undefined,
          "name": "Deep breathing",
          "priority": undefined,
          "show_saved_distracting_websites": undefined,
          "take_notes": undefined,
          "text_instructions": undefined,
          "video_urls": [
            "https://www.youtube.com/watch?v=36mnXAQGRzc",
          ],
        },
        "activity_type": "morning",
        "check_list": undefined,
        "completion_requirements": undefined,
        "duration_seconds": 180,
        "has_choices": false,
        "id": "74935284-e936-4247-8afa-e453484865e0",
        "impact_category": undefined,
        "linked_activity_template_id": undefined,
        "log_quantity": false,
        "log_summary_type": undefined,
        "pack_id": "8f458a6b-72ad-471b-80cc-22f47fd7c2b4",
        "sequence_index": 1,
        "user_id": "3a4f0bb1-5313-49da-9ae6-cc28e864763f",
      },
    ],
    [
      ActivityTemplate {
        "activity_data": ActivityData {
          "allowed_apps": undefined,
          "allowed_focus_mode_id": undefined,
          "allowed_urls": undefined,
          "break_type": undefined,
          "category": undefined,
          "choice_type": undefined,
          "competency_level": undefined,
          "current_competency_level": undefined,
          "image_urls": undefined,
          "include_in_every_break": undefined,
          "is_office_friendly": undefined,
          "log_quantity_question": undefined,
          "name": "Yoga",
          "priority": undefined,
          "show_saved_distracting_websites": undefined,
          "take_notes": undefined,
          "text_instructions": undefined,
          "video_urls": [
            "https://www.youtube.com/watch?v=nz5MCv0sFDA",
            "https://www.youtube.com/watch?v=oexYiIy75V8",
          ],
        },
        "activity_type": "breaking",
        "check_list": undefined,
        "completion_requirements": undefined,
        "duration_seconds": 300,
        "has_choices": false,
        "id": "346af843-818a-4e09-aaa2-53da041896de",
        "impact_category": undefined,
        "linked_activity_template_id": undefined,
        "log_quantity": false,
        "log_summary_type": undefined,
        "pack_id": "8f458a6b-72ad-471b-80cc-22f47fd7c2b4",
        "sequence_index": 0,
        "user_id": "3a4f0bb1-5313-49da-9ae6-cc28e864763f",
      },
      ActivityTemplate {
        "activity_data": ActivityData {
          "allowed_apps": undefined,
          "allowed_focus_mode_id": undefined,
          "allowed_urls": undefined,
          "break_type": undefined,
          "category": undefined,
          "choice_type": undefined,
          "competency_level": undefined,
          "current_competency_level": undefined,
          "image_urls": undefined,
          "include_in_every_break": undefined,
          "is_office_friendly": undefined,
          "log_quantity_question": undefined,
          "name": "Deep breathing",
          "priority": undefined,
          "show_saved_distracting_websites": undefined,
          "take_notes": undefined,
          "text_instructions": undefined,
          "video_urls": [
            "https://www.youtube.com/watch?v=36mnXAQGRzc",
          ],
        },
        "activity_type": "breaking",
        "check_list": undefined,
        "completion_requirements": undefined,
        "duration_seconds": 180,
        "has_choices": false,
        "id": "87935284-e936-4247-8afa-e453484865e0",
        "impact_category": undefined,
        "linked_activity_template_id": undefined,
        "log_quantity": false,
        "log_summary_type": undefined,
        "pack_id": "8f458a6b-72ad-471b-80cc-22f47fd7c2b4",
        "sequence_index": 1,
        "user_id": "3a4f0bb1-5313-49da-9ae6-cc28e864763f",
      },
    ],
    [
      ActivityTemplate {
        "activity_data": ActivityData {
          "allowed_apps": undefined,
          "allowed_focus_mode_id": undefined,
          "allowed_urls": undefined,
          "break_type": undefined,
          "category": undefined,
          "choice_type": undefined,
          "competency_level": undefined,
          "current_competency_level": undefined,
          "image_urls": undefined,
          "include_in_every_break": undefined,
          "is_office_friendly": undefined,
          "log_quantity_question": undefined,
          "name": "Yoga",
          "priority": undefined,
          "show_saved_distracting_websites": undefined,
          "take_notes": undefined,
          "text_instructions": undefined,
          "video_urls": [
            "https://www.youtube.com/watch?v=nz5MCv0sFDA",
            "https://www.youtube.com/watch?v=oexYiIy75V8",
          ],
        },
        "activity_type": "evening",
        "check_list": undefined,
        "completion_requirements": undefined,
        "duration_seconds": 300,
        "has_choices": false,
        "id": "906af843-818a-4e09-aaa2-53da041896de",
        "impact_category": undefined,
        "linked_activity_template_id": undefined,
        "log_quantity": false,
        "log_summary_type": undefined,
        "pack_id": "8f458a6b-72ad-471b-80cc-22f47fd7c2b4",
        "sequence_index": 0,
        "user_id": "3a4f0bb1-5313-49da-9ae6-cc28e864763f",
      },
      ActivityTemplate {
        "activity_data": ActivityData {
          "allowed_apps": undefined,
          "allowed_focus_mode_id": undefined,
          "allowed_urls": undefined,
          "break_type": undefined,
          "category": undefined,
          "choice_type": undefined,
          "competency_level": undefined,
          "current_competency_level": undefined,
          "image_urls": undefined,
          "include_in_every_break": undefined,
          "is_office_friendly": undefined,
          "log_quantity_question": undefined,
          "name": "Deep breathing",
          "priority": undefined,
          "show_saved_distracting_websites": undefined,
          "take_notes": undefined,
          "text_instructions": undefined,
          "video_urls": [
            "https://www.youtube.com/watch?v=36mnXAQGRzc",
          ],
        },
        "activity_type": "evening",
        "check_list": undefined,
        "completion_requirements": undefined,
        "duration_seconds": 300,
        "has_choices": false,
        "id": "67935284-e936-4247-8afa-e453484865e0",
        "impact_category": undefined,
        "linked_activity_template_id": undefined,
        "log_quantity": false,
        "log_summary_type": undefined,
        "pack_id": "8f458a6b-72ad-471b-80cc-22f47fd7c2b4",
        "sequence_index": 1,
        "user_id": "3a4f0bb1-5313-49da-9ae6-cc28e864763f",
      },
    ],
  ],
  "logQuantityQuestions": [],
  "packTutorials": [],
}
`;

exports[`ActivityTemplateParserService deserializeStandaloneActivities Positive: Should return an object containing deserialized standalone activities(formats activity DTOs to ActivityTemplates) 1`] = `
{
  "deserializedActivityTemplates": [
    [
      ActivityTemplate {
        "activity_data": ActivityData {
          "allowed_apps": undefined,
          "allowed_focus_mode_id": undefined,
          "allowed_urls": undefined,
          "break_type": undefined,
          "category": undefined,
          "choice_type": undefined,
          "competency_level": undefined,
          "current_competency_level": undefined,
          "image_urls": undefined,
          "include_in_every_break": undefined,
          "is_office_friendly": undefined,
          "log_quantity_question": undefined,
          "name": "Yoga",
          "priority": undefined,
          "show_saved_distracting_websites": undefined,
          "take_notes": undefined,
          "text_instructions": undefined,
          "video_urls": [
            "https://www.youtube.com/watch?v=nz5MCv0sFDA",
            "https://www.youtube.com/watch?v=oexYiIy75V8",
          ],
        },
        "activity_type": "standalone",
        "check_list": undefined,
        "completion_requirements": undefined,
        "duration_seconds": 300,
        "has_choices": false,
        "id": "116af843-818a-4e09-aaa2-53da041896de",
        "impact_category": undefined,
        "linked_activity_template_id": undefined,
        "log_quantity": false,
        "log_summary_type": undefined,
        "pack_id": "8f458a6b-72ad-471b-80cc-22f47fd7c2b4",
        "sequence_index": 0,
        "user_id": "3a4f0bb1-5313-49da-9ae6-cc28e864763f",
      },
      ActivityTemplate {
        "activity_data": ActivityData {
          "allowed_apps": undefined,
          "allowed_focus_mode_id": undefined,
          "allowed_urls": undefined,
          "break_type": undefined,
          "category": undefined,
          "choice_type": undefined,
          "competency_level": undefined,
          "current_competency_level": undefined,
          "image_urls": undefined,
          "include_in_every_break": undefined,
          "is_office_friendly": undefined,
          "log_quantity_question": undefined,
          "name": "Journaling",
          "priority": undefined,
          "show_saved_distracting_websites": undefined,
          "take_notes": undefined,
          "text_instructions": undefined,
          "video_urls": [],
        },
        "activity_type": "standalone",
        "check_list": undefined,
        "completion_requirements": undefined,
        "duration_seconds": 300,
        "has_choices": false,
        "id": "b8301b80-1286-464a-b0be-5838f52e2ff6",
        "impact_category": undefined,
        "linked_activity_template_id": undefined,
        "log_quantity": undefined,
        "log_summary_type": undefined,
        "pack_id": "8f458a6b-72ad-471b-80cc-22f47fd7c2b4",
        "sequence_index": 1,
        "user_id": "3a4f0bb1-5313-49da-9ae6-cc28e864763f",
      },
      ActivityTemplate {
        "activity_data": ActivityData {
          "allowed_apps": undefined,
          "allowed_focus_mode_id": undefined,
          "allowed_urls": undefined,
          "break_type": undefined,
          "category": undefined,
          "choice_type": undefined,
          "competency_level": undefined,
          "current_competency_level": undefined,
          "image_urls": undefined,
          "include_in_every_break": undefined,
          "is_office_friendly": undefined,
          "log_quantity_question": undefined,
          "name": "Deep breathing",
          "priority": undefined,
          "show_saved_distracting_websites": undefined,
          "take_notes": undefined,
          "text_instructions": undefined,
          "video_urls": [
            "https://www.youtube.com/watch?v=36mnXAQGRzc",
          ],
        },
        "activity_type": "standalone",
        "check_list": undefined,
        "completion_requirements": undefined,
        "duration_seconds": 180,
        "has_choices": false,
        "id": "74935284-e936-4247-8afa-e453484865e0",
        "impact_category": undefined,
        "linked_activity_template_id": undefined,
        "log_quantity": false,
        "log_summary_type": undefined,
        "pack_id": "8f458a6b-72ad-471b-80cc-22f47fd7c2b4",
        "sequence_index": 2,
        "user_id": "3a4f0bb1-5313-49da-9ae6-cc28e864763f",
      },
    ],
  ],
  "logQuantityQuestions": [],
  "packTutorials": [],
}
`;

exports[`ActivityTemplateParserService serialize Positive: should return serialized activity templates 1`] = `
{
  "standalone_activities": [
    {
      "activity_type": "standalone_activity",
      "check_list": undefined,
      "choices": undefined,
      "completion_requirements": undefined,
      "duration_seconds": 300,
      "id": "116af843-818a-4e09-aaa2-53da041896de",
      "impact_category": undefined,
      "linked_activity_template_id": undefined,
      "log_quantity": false,
      "log_quantity_questions": undefined,
      "log_summary_type": undefined,
      "pack_id": "bc55568b-59bb-4842-8a83-e92843356978",
    },
    {
      "activity_type": "standalone_activity",
      "check_list": undefined,
      "choices": undefined,
      "completion_requirements": undefined,
      "duration_seconds": 300,
      "id": "b8301b80-1286-464a-b0be-5838f52e2ff6",
      "impact_category": undefined,
      "linked_activity_template_id": undefined,
      "log_quantity": undefined,
      "log_quantity_questions": undefined,
      "log_summary_type": undefined,
      "pack_id": "bc55568b-59bb-4842-8a83-e92843356978",
    },
    {
      "activity_type": "standalone_activity",
      "check_list": undefined,
      "choices": undefined,
      "completion_requirements": undefined,
      "duration_seconds": 180,
      "id": "74935284-e936-4247-8afa-e453484865e0",
      "impact_category": undefined,
      "linked_activity_template_id": undefined,
      "log_quantity": false,
      "log_quantity_questions": undefined,
      "log_summary_type": undefined,
      "pack_id": "bc55568b-59bb-4842-8a83-e92843356978",
    },
  ],
}
`;

exports[`ActivityTemplateParserService serializeLibraryActivities Positive: Should format ActivityTemplates to UpdateActivityDto type to send as response 1`] = `
{
  "activity_type": "standalone",
  "check_list": undefined,
  "choice_type": "random",
  "choices": [
    {
      "activity_type": "standalone",
      "check_list": undefined,
      "choices": [],
      "completion_requirements": undefined,
      "duration_seconds": 300,
      "id": "3a9061fa-1cc1-43e9-a0ca-6cbfe6a4da80",
      "log_quantity": true,
      "log_quantity_questions": undefined,
      "log_summary_type": "SUM",
      "name": "Crunches",
      "pack_id": "8f458a6b-72ad-471b-80cc-22f47fd7c2b4",
      "video_urls": [],
    },
  ],
  "completion_requirements": undefined,
  "duration_seconds": 300,
  "id": "b9501b80-1286-464a-b0be-5838f52e2ff8",
  "log_quantity": false,
  "log_quantity_questions": undefined,
  "log_summary_type": "SUM",
  "name": "Journaling",
  "pack_id": "8f458a6b-72ad-471b-80cc-22f47fd7c2b4",
  "video_urls": [],
}
`;
